# PlayerDemo

./: readme.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/diaochan/playerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/diaochan/playerdemo/: MainActivity.java  WangyiPlayer.java
gradle/wrapper/: gradle-wrapper.properties
